--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "jquery": "^1.12.4",
     "slick-carousel": "https://github.com/kenwheeler/slick.git#1.6.0",
     "jarallax": "https://github.com/nk-o/jarallax.git#^1.7.3",
-    "fancybox": "^3.0.47",
+    "fancybox": "^2.1.6",
     "jquery.maskedinput": "https://github.com/digitalBush/jquery.maskedinput.git#^1.4.1",
     "hyphernationRUru": "https://github.com/ProjectSoft-STUDIONIONS/hyphernationRUru.git",
     "turn.js": "https://github.com/blasten/turn.js.git",
@@ -27,6 +27,7 @@
     "jquery-ui": "https://github.com/components/jqueryui.git#1.12.1",
     "arcticModal": "https://github.com/vjik/arcticModal.git",
     "jqueryui-touch-punch": "https://github.com/furf/jquery-ui-touch-punch.git",
-    "mixitup": "https://github.com/patrickkunka/mixitup.git#^3.1.12"
+    "mixitup": "https://github.com/patrickkunka/mixitup.git#^3.1.12",
+    "datetimepicker": "https://github.com/xdan/datetimepicker.git#^2.5.4"
   }
 }
