--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/opexi/kiostom#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "load-grunt-tasks": "^3.5.0",
+    "time-grunt": "^1.4.0",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -25,16 +29,12 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-jade": "^1.0.0",
-    "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ftp-push": "^1.1.1",
     "grunt-modernizr": "^1.0.2",
     "grunt-newer": "^1.2.0",
-    "grunt-notify": "git+https://github.com/ProjectSoft-STUDIONIONS/grunt-notify.git",
-    "load-grunt-tasks": "^3.5.0",
-    "time-grunt": "^1.4.0"
+    "grunt-notify": "git+https://github.com/ProjectSoft-STUDIONIONS/grunt-notify.git"
   }
 }
